# object_recognition_clusters

./: CMakeLists.txt  package.xml
scripts/: cluster_bounding_box_finder_server.py
src/object_recognition_clusters/: cluster_bounding_box_finder.py
